# Socket_strings_transferer

./: CMakeLists.txt  README.md  check_functions.cpp  includes.h
client/: client.cpp  client.h  client_main.cpp
server/: server.cpp  server.h  server_main.cpp
socket/: socket.cpp  socket.h
